# memory_pool

./: .gitignore  CMakeLists.txt
docs/: git版本控制.md  v1.13.0_vs_libc.md  v1.17.0_论文评审修复.md  v1.18.0_论文评审与代码修复.md  v1.19.0_SizeClassInfo编译期合并.md  v1.20.0_freed_count不变量修复.md  v1.21.0_性能优化_TLS_fastpath_alignas.md  优秀参考优化.md  开发问题记录.md  性能优化.md  性能对比_v1.15.0_vs_v1.16.0_CTZ优化.md  性能指标测试.md  项目统计信息.md
examples/: demo.cpp
include/mempool/: mempool.h
real_tests/: CMakeLists.txt  bench_common.cpp  bench_common.h  bench_fastpath.cpp  bench_pattern_single.cpp  bench_scenario_network.cpp  probe_k_sweep.cpp
src/: arena.cpp  arena.h  internal.h  mempool.cpp  platform.h  platform_linux.cpp  platform_win32.cpp  size_class.h  stats.cpp  stats.h  tlc.cpp  tlc.h
test/: CMakeLists.txt  test_arena.cpp  test_basic.cpp  test_perf.cpp  test_perf_detailed.cpp  test_reclaim_invariant.cpp  test_thread.cpp
tests/: bench_pattern_multi.cpp  bench_pattern_overhead.cpp  bench_pattern_xthread.cpp  bench_scenario_game.cpp  bench_scenario_network.cpp  bench_scenario_pipeline.cpp  perf_focused.cpp  perf_t8.cpp  probe_pagefault.cpp  probe_xthread_cliff.cpp
